--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,16 +10,16 @@ const { title } = Astro.props;
 		<meta name="generator" content={Astro.generator} />
 		<title>{title} - TKI Basecamp</title>
 	</head>
-	<body class="bg-gray-900">
+	<body class="bg-zinc-900">
 		<header class="fixed top-0 left-0 right-0">
 			<nav
 				class="flex justify-between text-slate-100 px-4 max-w-4xl m-auto"
 			>
 				<a href="/" class="text-3xl font-semibold py-4">TKI</a>
 				<div class="flex items-center gap-x-8">
-					<a href="" class="text-xl">Home</a>
-					<a href="" class="text-xl">Profile</a>
-					<a href="" class="text-xl">Member</a>
+					<a href="/" class="text-xl">Home</a>
+					<a href="/profile" class="text-xl">Profile</a>
+					<a href="/member" class="text-xl">Member</a>
 				</div>
 			</nav>
 		</header>
